--- a/css/main.css
+++ b/css/main.css
@@ -19,10 +19,22 @@ body {
   margin: 0;
 }
 
+figure {
+  float: right;
+  border-bottom: 3px solid #222;
+  border-top: 3px solid #222;
+  width: 40%;
+  font-style: italic;
+  margin: 0 -10rem 0 0;
+}
+
 img {
   display: block;
+  padding: 0.5rem 0 0.5rem 0;
   width: 100%;
 }
+
+
 
 .wrapper {
   margin: 0 auto;
@@ -68,16 +80,34 @@ p:first-child {
   text-indent: 0;
 }
 
+main > p:first-child::first-letter {
+  font-style: italic;
+  box-sizing: border-box;
+  color: #fff;
+  background-color: #666;
+  width: 10px;
+  font-size: 5rem;
+  font-style: normal;
+  padding: 0.75rem 1rem 0.75rem 1rem;
+  border-top: 3px solid #222;
+  border-bottom: 3px solid #222;
+  float: left;
+  margin: 0.5rem 0.5rem 0.5rem -4rem;
+  width: 90%;
+}
+
 main > p:first-child::first-line {
   font-style: italic;
 }
 
 footer {
   padding: 1.5rem 0;
-
   background-color: #333;
-
   color: #f2f2f2;
+}
+
+figcaption {
+  font-size: 14px;
 }
 
 /*
