--- a/css/main.css
+++ b/css/main.css
@@ -19,29 +19,9 @@ body {
   margin: 0;
 }
 
-figure {
-  float: right;
-  border-bottom: 3px solid #222;
-  border-top: 3px solid #222;
-  width: 40%;
-  font-style: italic;
-  margin: 0 -10rem 0 0;
-}
-
 img {
   display: block;
-  padding: 0.5rem 0 0.5rem 0;
   width: 100%;
-}
-
-blockquote {
-  border-bottom: 3px solid #222;
-  border-top: 3px solid #222;
-  font-size: 20pt;
-  color: grey;
-  float: left;
-  width: 40%;
-  margin: 0.5rem 0.5rem 0.5rem -4rem;
 }
 
 .wrapper {
@@ -88,34 +68,16 @@ p:first-child {
   text-indent: 0;
 }
 
-main > p:first-child::first-letter {
-  font-style: italic;
-  box-sizing: border-box;
-  color: #fff;
-  background-color: #666;
-  width: 10px;
-  font-size: 5rem;
-  font-style: normal;
-  padding: 0.75rem 1rem 0.75rem 1rem;
-  border-top: 3px solid #222;
-  border-bottom: 3px solid #222;
-  float: left;
-  margin: 0.5rem 0.5rem 0.5rem -4rem;
-  width: 90%;
-}
-
 main > p:first-child::first-line {
   font-style: italic;
 }
 
 footer {
   padding: 1.5rem 0;
-  background-color: #333;
-  color: #f2f2f2;
-}
 
-figcaption {
-  font-size: 14px;
+  background-color: #333;
+
+  color: #f2f2f2;
 }
 
 /*
@@ -125,3 +87,37 @@ figcaption {
 */
 
 /* Write your CSS here */
+
+.wrapper::first-letter {
+  float: left;
+  width: 25%;
+  overflow: hidden;
+  background-color: #666;
+  font-size: 5rem;
+  color: #f2f2f2;
+  padding: 0 .2em 0 0;
+  border-top: 3px solid #333;
+  border-bottom: 3px solid #333;
+}
+
+figure {
+  float: right;
+  width: 300px;
+  overflow: hidden;
+  border-top: 3px solid #333;
+  border-bottom: 3px solid #333;
+}
+
+figcaption {
+  font-style: italic;
+  font-size: 1.5rem;
+}
+
+blockquote {
+  font-size: 1.5rem;
+  float: left;
+  width: 300px;
+  overflow: hidden;
+  border-top: 3px solid #333;
+  border-bottom: 3px solid #333;
+}
